--- a/templates/template.html
+++ b/templates/template.html
@@ -8,7 +8,7 @@
     <header>
       <nav class="navbar navbar-inverse">
         <div class="navbar-inverse">
-          <a class="brand" href="/feelsgoodman">Best Biscuits of all time.</a>
+          <a class="brand" href="/danceman">Best Biscuits of all time.</a>
           <ul class="nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/welcome">Not Biscuits</a></li>
